--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Miller-Jensen Lab at Yale"
+theme = "miller-jensen"
+
