--- a/config.toml
+++ b/config.toml
@@ -3,4 +3,4 @@ languageCode = "en-us"
 title = "Miller-Jensen Lab at Yale"
 theme = "miller-jensen"
 disableKinds = ["taxonomy", "term"]
-
+verbose = true
