--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v2
       env:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         EXTERNAL_REPOSITORY: miller-jensen-lab/miller-jensen-website-build 
         PUBLISH_BRANCH: main
         PUBLISH_DIR: ./public
