--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -27,7 +27,7 @@ jobs:
       uses: peaceiris/actions-gh-pages@v2
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        EXTERNAL_REPOSITORY: miller-jensen-lab/miller-jensen-website-build 
+        EXTERNAL_REPOSITORY: miller-jensen-lab/miller-jensen-lab.github.io 
         PUBLISH_BRANCH: main
         PUBLISH_DIR: ./public
       with:
