--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -23,6 +23,9 @@ jobs:
     - name: Build
       run: hugo --minify
 
+    - name: Add CNAME
+      run: echo "www.miller-jensen.org" > public/CNAME
+
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v2
       env:
